compilateurMinCaml/tests/syntax/valid/If.ml
print_int (if true then 101 else 2)