compilateurMinCaml/tests/syntax/invalid/If.ml
print_int (if then 101 else 2)